--- a/package.json
+++ b/package.json
@@ -6,15 +6,9 @@
     "node": "12.x"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.5.7",
-    "babel-core": "6.14.0",
+    "babel-core": "^6.14.0",
     "express": "^4.17.1",
-    "fs": "0.0.2",
     "node-fetch": "^2.6.0",
-    "react": "^16.13.1",
-    "react-router-dom": "^4.2.2",
-    "react-window-size": "^1.2.2",
-    "sql.js": "0.3.2",
     "typescript": "^3.8.3"
   },
   "main": "dist/server.js",
@@ -29,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.2",
+    "@types/node-fetch": "^2.5.7",
     "concurrently": "^3.6.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "14.1.0",
